morrw work on refcatored settings, cached pages/settings, docs, porting templates etc...

--- a/data/tpl/default/page.html
+++ b/data/tpl/default/page.html
@@ -33,7 +33,7 @@
     </div>
 
     <div class="content">
-     <!-- The page content, Nte the use of '&' so the content does not get HTML escaped-->
+     <!-- The page content, Note the use of '&' so the content does not get HTML escaped-->
       {{ & content }}
     </div>
   </div>
