--- a/data/tpl/default/page.html
+++ b/data/tpl/default/page.html
@@ -17,7 +17,9 @@
 
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
       <meta name="robots" content="index,follow" />
-  </head>
+      <script type="text/javascript" src="tpl/jquery.min.js"></script>
+      <script type="text/javascript" src="tpl/template.js"></script>
+ </head>
   <body>
   <div>
     <div class="navbar navbar-fixed-top">
@@ -56,7 +58,16 @@
               <!-- Comments -->
                               <div class="well comments">
                               <h2> Comments </h2>
-                                  <a class="button" href='addComment.do'>Add a new Comment</a>
+                                  <a id="addCommentLink" href='#'>Add a new Comment</a>
+                                  <div id="addCommentPane" style="display: none">
+                                    <form id="addCommentForm" class="form-horizontal">
+                                      <div class="control-group"><label class="control-label" >Title:</label><div class="controls"><input class="span9" type="text" name="title" value="My 2 cents"></div></div>
+                                      <div class="control-group"><label class="control-label" >Author:</label><div class="controls"><input class="span9" type="text"  name="Author" value="Guest"></div></div>
+                                      <div class="control-group"><label class="control-label" >Text:</label><div class="controls"><textArea class="span9" rows="6" name="text"></textArea></div></div>
+                                      <div class="control-group"><div class="controls"><img class="span5" id="captchca" src=""/><input type="text" class="span4" placeHolder="Enter captchca code (4 alphanum)"></div></div>
+                                      <div class="control-group"><div class="controls"><button type="submit" class="btn">Submit</button></div></div>
+                                    </form>
+                                  </div>
                               <hr/>
               {{#comments}}
                               <div>
@@ -73,6 +84,7 @@
                               </div>
               <!-- End comments -->
               {{/commentsEnabled}}
+
 
           </div>
         </div>
