Full on support for comments with ajax/json/jquery pagination and Capctha validation for posting.

--- a/data/tpl/default/page.html
+++ b/data/tpl/default/page.html
@@ -7,6 +7,8 @@
       <title>{{title}}</title>
       <meta name="date" content='{{generatedDate}}' />
       <meta name="keywords" content='{{title}}, {{keywords}}'/>
+      <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+      <meta name="robots" content="index,follow" />
 
       <!-- Note that all template resources should be fetched like this (tpl/*)-->
       <link rel='stylesheet' type='text/css' href='tpl/bootstrap.min.css' />
@@ -15,8 +17,6 @@
       <!-- You might want to include your extra custom css here -->
       <link rel='stylesheet' type='text/css' href='tpl/template.css' />
 
-      <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-      <meta name="robots" content="index,follow" />
       <script type="text/javascript" src="tpl/jquery.min.js"></script>
       <script type="text/javascript" src="tpl/template.js"></script>
  </head>
@@ -56,35 +56,24 @@
               {{#commentsEnabled}}
               <hr/>
               <!-- Comments -->
-                              <div class="well comments">
-                              <h2> Comments </h2>
-                                  <a id="addCommentLink" href='#'>Add a new Comment</a>
-                                  <div id="addCommentPane" style="display: none">
-                                    <form id="addCommentForm" class="form-horizontal">
-                                      <div class="control-group"><label class="control-label" >Title:</label><div class="controls"><input class="span9" type="text" name="title" value="My 2 cents"></div></div>
-                                      <div class="control-group"><label class="control-label" >Author:</label><div class="controls"><input class="span9" type="text"  name="Author" value="Guest"></div></div>
-                                      <div class="control-group"><label class="control-label" >Text:</label><div class="controls"><textArea class="span9" rows="6" name="text"></textArea></div></div>
-                                      <div class="control-group"><div class="controls"><img class="span5" id="captchca" src=""/><input type="text" class="span4" placeHolder="Enter captchca code (4 alphanum)"></div></div>
-                                      <div class="control-group"><div class="controls"><button type="submit" class="btn">Submit</button></div></div>
-                                    </form>
-                                  </div>
-                              <hr/>
-              {{#comments}}
-                              <div>
-                                <b>Post time:</b> {{date}} <b>By:</b> {{author}}<br/>
-                                <b>Title: {{title}}</b><br/>
-                                <pre>{{text}}</pre>
-                              </div>
-                              <hr/>
-              {{/comments}}
-              {{#moreComments}}
-                              <a href="?allComments=1">View {{commentsLeft}} older comments</a>
-                              <hr/>
-              {{/moreComments}}
-                              </div>
+                <div class="well comments">
+                <h2> Comments </h2>
+                  <a id="addCommentLink" href='#'>Add a new Comment</a>
+                  <div id="addCommentPane" style="display: none">
+                    <form id="addCommentForm" class="form-horizontal">
+                      <div class="control-group"><label class="control-label" >Title:</label><div class="controls"><input class="span9" type="text" name="title" value="My 2 cents"></div></div>
+                      <div class="control-group"><label class="control-label" >Author:</label><div class="controls"><input class="span9" type="text"  name="author" value="Guest"></div></div>
+                      <div class="control-group"><label class="control-label" >Text:</label><div class="controls"><textArea class="span9" rows="6" name="text"></textArea></div></div>
+                      <div class="control-group"><div class="controls"><img class="span5" id="captchca" src=""/><input type="text" name="captcha" class="span4" placeHolder="Enter captchca code (4 alphanum)"></div></div>
+                      <div class="control-group"><div class="controls"><button type="submit" class="btn">Submit</button></div></div>
+                    </form>
+                  </div>
+                <div id="comments">
+                  <!-- comments will be filled in by ajax / jquery, see template.js-->
+                </div>
+              </div>
               <!-- End comments -->
               {{/commentsEnabled}}
-
 
           </div>
         </div>
