support for subfolder, tags & code highlighting

--- a/data/tpl/default/page.html
+++ b/data/tpl/default/page.html
@@ -17,6 +17,10 @@
       <!-- You might want to include your extra custom css here -->
       <link rel='stylesheet' type='text/css' href='tpl/template.css' />
 
+      <!-- highlight.js -->
+      <link rel="stylesheet" href="/tpl/dark.css">
+      <script src="/tpl/highlight.pack.js"></script>
+
       <script type="text/javascript" src="tpl/jquery.min.js"></script>
       <script type="text/javascript" src="tpl/template.js"></script>
  </head>
