--- a/data/tpl/default/admin.html
+++ b/data/tpl/default/admin.html
@@ -8,21 +8,14 @@
       <link rel='stylesheet' type='text/css' href='tpl/template.css' />
       <script type="text/javascript" src="tpl/jquery.min.js"></script>
       <script type="text/javascript" src="tpl/template.js"></script>
-      <script type="text/javascript" src="tpl/epiceditor.min.js"></script>
  </head>
   <body>
   <div>
     <div class="navbar navbar-fixed-top">
         <div class="navbar-inner">
           <div class="container-fluid">
-            <a class="brand" href="#">Fantomato</a>
+            <a class="brand" href="#">Fantomato Admin</a>
             <div class="nav-collapse">
-                <ul class="nav">
-                  <!-- #ap will call a wiki lambda that will add "class='active'" if the path matches the arg-->
-                  <li {{#ap}}page1{{/ap}}><a href="page1">Page1(.md)</a></li>
-                  <li {{#ap}}page2{{/ap}}><a href="page2">Page2(.txt)</a></li>
-                  <li {{#ap}}page3{{/ap}}><a href="page3">Page3(.html)</a></li>
-              </ul>
            </div>
           </div>
         </div>
@@ -32,19 +25,70 @@
       <div class="row-fluid">
         <div class="span3">
           <div class="well">
+            <h3>Namespaces:</h3>
+            <select id="namespace" name="namespace" style="width:100%">
+              <option value="-">-- Namespaces --</option>
+              {{#namespaces}}
+                <option value="{{toStr}}">{{toStr}}</option>
+              {{/namespaces}}
+            </select>
+          </div>
+          <div class="well">
+            <h3>Server Pages:</h3>
+            <select id="page" name="page" style="width:100%">
+              <option value="-">-- Page --</option>
+            </select><br/>
+            <input type="button" class="btn btn-primary" value="New Page">
+            <input type="button" class="btn btn-warning" value="Rename Page">
+            <input type="button" class="btn btn-danger" value="Delete Page">
+          </div>
+          <div class="well">
+            <h3>Page Options:</h3>
+            <select id="options" name="options" style="width:100%">
+              <option value="-">-- Options --</option>
+            </select>
+            <input id="refreshTags" type="button" class="btn btn-success" value="Refresh tags">
+          </div>
+          <div class="well">
+            <h3>Server Files:</h3>
+            <select id="file" name="file" style="width:100%">
+              <option value="-">-- File --</option>
+            </select><br/>
+            <input id="openFile" type="button" class="btn btn-success" value="View File">
+            <input type="button" class="btn btn-primary" value="Add File">
+            <input type="button" class="btn btn-danger" value="Delete File">
+          </div>
+          <div class="well">
+            <h3>Page Comments:</h3>
+            <select id="comments" name="comments" style="width:100%">
+              <option value="-">-- Comment --</option>
+            </select>
+          </div>
+          <div class="well">
+            <h3>Editor Local storage:</h3>
+            <select id="storage" name="storage" style="width:100%">
+              <option value="-">-- Local Storage --</option>
+            </select><br/>
           </div>
         </div>
         <div class="span9">
-          <div class="content">
-             <div id="epiceditor"></div>
-          </div>
+           <div class="row-fluid">
+             <div class="span6">
+               <button id="save" class="btn btn-primary col3" style="margin-bottom:10px">Save</button>
+               <span id="saved"></span>
+             </div>
+             <div class="span6" style="text-align:right; font-size:120%" id="curFile"></div>
+           </div>
+           <div class="row-fluid">
+             <div id="epiceditor" class="span12" style="min-height:500px"></div>
+           </div>
         </div>
       </div>
     </div>
   </div>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/epiceditor/0.2.0/js/epiceditor.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="tpl/admin.js"></script>
+    <script>  $("#namespace").val('{{ns}}');</script>
   </body>
-  <script>
-    var editor = new EpicEditor().load();
-  </script>
 </html>
 
