--- a/data/tpl/default/page.html
+++ b/data/tpl/default/page.html
@@ -11,18 +11,18 @@
       <meta name="robots" content="index,follow" />
 
       <!-- Note that all template resources should be fetched like this (tpl/*)-->
-      <link rel='stylesheet' type='text/css' href='tpl/bootstrap.min.css' />
-      <link rel='stylesheet' type='text/css' href='tpl/standard.css' />
+      <link rel='stylesheet' type='text/css' href='/tpl/bootstrap.min.css' />
+      <link rel='stylesheet' type='text/css' href='/tpl/standard.css' />
 
       <!-- You might want to include your extra custom css here -->
-      <link rel='stylesheet' type='text/css' href='tpl/template.css' />
+      <link rel='stylesheet' type='text/css' href='/tpl/template.css' />
 
       <!-- highlight.js -->
       <link rel="stylesheet" href="/tpl/dark.css">
       <script src="/tpl/highlight.pack.js"></script>
 
-      <script type="text/javascript" src="tpl/jquery.min.js"></script>
-      <script type="text/javascript" src="tpl/template.js"></script>
+      <script type="text/javascript" src="/tpl/jquery.min.js"></script>
+      <script type="text/javascript" src="/tpl/template.js"></script>
  </head>
   <body>
   <div>
