--- a/data/tpl/default/admin.html
+++ b/data/tpl/default/admin.html
@@ -90,6 +90,12 @@
            <div class="row-fluid">
              <div id="epiceditor" class="span12" style="min-height:500px"></div>
            </div>
+           <div class="row-fluid">
+             <div id="epiceditor" class="span12">
+              <h3>Tags:</h3>
+              <input type="text" class="span12" id="tags"/>
+             </div>
+           </div>
         </div>
       </div>
     </div>
